Fix overflow issues

--- a/src/ui/styles/CoverLetter.scss
+++ b/src/ui/styles/CoverLetter.scss
@@ -45,7 +45,7 @@
             padding-bottom: 2rem;
 
             p {
-                height: 1.8rem;
+                line-height: 1.8rem;
                 margin: 0;
             }
         }
